# ggi1

./: .gitignore  README.md
kgue1/: CMakeLists.txt  main.c  nachbearbeitung-1.c  nachbearbeitung-2.c  zerstueckeltes_programm.c
kgue2/: CMakeLists.txt
kgue2/nachbearbeitung/: 2nd.c
kgue2/praesenz/: 2pa.c  2pb.c  2pc.c  2pd.c
kgue2/vorbereitung/: 2va.c  2vb.c  2vc.c
kgue3/: CMakeLists.txt
kgue3/nachbearbeitung/: 3ana.c  3anc.c  3na.c  3nb.c  3nc.c
kgue3/praesenz/: 3apb.txt  3apc.c  3pa.c  3pb.c  3pc.c
kgue3/vorbereitung/: 3va.c  3vb.c
kgue3a/: CMakeLists.txt
kgue3a/nachbearbeitung/: 3anb.c
kgue3a/praesenz/: 3apa.c
kgue3a/vorbereitung/: 3ava.c  3avb.c
kgue4/: CMakeLists.txt
kgue4/nachbearbeitung/: 4nb.c
kgue4/praesenz/: 4pa.c  4pb.c  4pc.c
kgue4/vorbereitung/: 4va.c  4vb.txt
